fix some naming and formatting